style.css
body {
  font-family: "Poiret One", serif;
  text-shadow: -0.25px 0 #555555, 0 0.25px #555555, 0.25px 0 #555555,
    0 -0.25px #555555;
  background-attachment: fixed;
  margin: 0em;
  padding: 0em;
  background: linear-gradient(
    -45deg,
    #ec52237a,
    #184cda8e,
    #23a5d57e,
    #21cf8781
  );
  background-size: 200% 200%;
  -webkit-animation: Gradient 10s ease infinite;
  -moz-animation: Gradient 10s ease infinite;
  animation: Gradient 10s ease infinite;
}

@-webkit-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@-moz-keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

@keyframes Gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

#simmer-title {
  font-family: "Aclonica", sans-serif;
  text-shadow: none;
}

#bloom-title {
  font-family: "Josefin Sans", sans-serif;
  text-shadow: none;
}

span {
  text-shadow: -0.1px 0 #ffffff, 0 0.1px #ffffff, 0.1px 0 #ffffff,
    0 -0.1px #ffffff;
}

.stack {
  background-image: linear-gradient(45deg, #ff8c00, #e78b4d);
  border-style: solid;
  color: #000000;
  padding: 0 0 5px 0;
}

.stack > * {
  margin: 0;
}

.navbar {
  padding: 0 3em;
  width: 100vw;
}

#navbarDropdown {
  width: 100vw;
}

.page {
  margin: 0 3em;
}

.image {
  border-style: solid;
  border-color: #dfdfdf;
  box-shadow: 5px 5px 10px #4e4e4e;
}

.embedly-card {
  height: 20em;
  background-image: linear-gradient(#4e4e4e, #252525);
  border-radius: 5px;
}

.video-responsive {
  overflow: hidden;
  padding-bottom: 56.25%;
  position: relative;
  height: 0;
}
.video-responsive iframe {
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
}

#experience > div {
  justify-content: center;
}

.experience-box {
  /* height: 30vh; */
  background-color: #dddddd;
  border-style: solid;
  border-radius: 10px;
  /* overflow: initial; */
}

#contact div{
  z-index: 13;
}

.contact-links a:hover {
  color: #ffffff;
}

.gears {
  display: none;
  transform: translateZ(1);
}

.gears-left {
  margin-left: -10em;
  margin-top: -2.5em;
}
.gears-right {
  margin-right: 13.5em;
  margin-top: -2.5em;
}

.gears img {
  position: fixed;
  height: 15em;
  z-index: 10;
  opacity: 0.75;
  overflow: hidden;
}

.gear-left.counterclockwise {
  margin-left: 3.5em;
}
.gear-right.counterclockwise {
  margin-left: 3.5em;
}

.gear-2 {
  margin-top: 5em;
}
.gear-3 {
  margin-top: 10em;
}
.gear-4 {
  margin-top: 15em;
}
.gear-5 {
  margin-top: 20em;
}
.gear-6 {
  margin-top: 25em;
}
.gear-7 {
  margin-top: 30em;
}
.gear-8 {
  margin-top: 35em;
}
.gear-9 {
  margin-top: 40em;
}
.gear-10 {
  margin-top: 45em;
}
.gear-11 {
  margin-top: 50em;
}
.gear-12 {
  margin-top: 55em;
}
.gear-13 {
  margin-top: 60em;
}
.gear-14 {
  margin-top: 65em;
}

#gear-toggle {
  position: fixed;
  bottom: 2em;
  right: 2em;
  padding: 0.5em;
  width: 30vw;
  border-style: solid;
  border-radius: 10px;
  background-color: #ff8c00;
  color: #000000;
  z-index: 100;
  opacity: 0.75;
  animation-name: fade-in;
  animation-duration: 1s;
  -webkit-animation-name: fade-in;
  -webkit-animation-duration: 1s;
}

#gear-toggle:hover {
  color: #060486;
  opacity: 1;
}

@keyframes fade-in {
  from {opacity: 0;}
  to {opacity: 0.75;}
}

@-webkit-keyframes fade-in {
  from {opacity: 0;}
  to {opacity: 0.75;}
}

.project-image {
  margin: 0 10em;
}

.stack, .embedly-card, .video-responsive {
  margin: 1em;
}

#email {
  color: white;
}

.dropdown-menu {
  width: 100%;
}

#headshot-mobile {
  display: none;
}

.medium-card {
  background-image: linear-gradient(45deg, #c0c0c0, #919191);
  border-radius: 10px;
  border-style: solid;
  margin: 1em;
  padding-top: 1em;
}

.media-left {
  background-color: white;
  border-radius: 5px;
  padding: 0.5em;
}

.card:hover {
  border-color: #514fc4;
  background-image: linear-gradient(45deg, #e7e7e7, #bbb7b7);
}

@media screen and (max-width: 769px) {
  #headshot-mobile {
    display: block;
  }
  #headshot-desktop {
    display: none;
  }
  .embedly-card {
    height: 25em;
  }
  .gears {
    display: none;
    position: fixed;
    visibility: hidden;
  }
  #gear-toggle {
    display: none;
  }
  .project-image {
    margin: 1em;
  }
}

@media screen and (min-height: 890px){
  .gear-12, .gear-13, .gear-14 {
    display: none;
  }
}

